--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 matplotlib==3.4.2
 numpy==1.21.0
 pandas==1.3.0
-plotly==5.1.0
+plotly.express==0.4.1
 plotnine==0.8.0
 streamlit==0.87.0
 geopandas==0.10.2
